practica4/src/y.output
Estado 144 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: cabecera_programa bloque

    2 cabecera_programa: PRINCIPAL PARIZQ PARDER

    3 inicio_bloque: LLAVEIZQ

    4 bloque: inicio_bloque declar_de_variables_locales declar_procedimientos sentencias LLAVEDER
    5       | inicio_bloque declar_de_variables_locales sentencias LLAVEDER

    6 lista_parametros: lista_parametros COMA parametro
    7                 | parametro

    8 lista_para_por_defecto: lista_para_por_defecto COMA parametro IGUAL CONSTANTE
    9                       | parametro IGUAL CONSTANTE
   10                       | lista_para_por_defecto COMA parametro IGUAL agregado_lista
   11                       | parametro IGUAL agregado_lista

   12 parametro: tipos ID

   13 declar_de_variables_locales: INICIOVAR variables_locales FINVAR
   14                            | %empty

   15 variables_locales: variables_locales cuerpo_declar_variables
   16                  | cuerpo_declar_variables

   17 cuerpo_declar_variables: tipos declar_variables PYC
   18                        | error

   19 declar_variables: ID
   20                 | ID IGUAL expresion
   21                 | declar_variables COMA ID
   22                 | declar_variables COMA ID IGUAL expresion

   23 declar_procedimientos: declar_procedimientos declar_proced
   24                      | declar_proced

   25 declar_proced: cabecera_proced bloque

   26 inicio_cabe_proced: PROCEDIMIENTO ID

   27 cabecera_proced: inicio_cabe_proced PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   28                | inicio_cabe_proced PARIZQ lista_parametros PARDER
   29                | inicio_cabe_proced PARIZQ PARDER
   30                | error

   31 sentencias: sentencias sentencia
   32           | sentencia

   33 sentencia: bloque
   34          | sentencia_asignacion
   35          | sentencia_if
   36          | MIENTRAS PARIZQ expresion PARDER sentencia
   37          | PARA sentencia_asignacion HASTA expresion ITERANDO expresion HACER sentencia
   38          | LEER lista_identificadores PYC
   39          | IMPRIMIR mensajes PYC
   40          | llamada_proced
   41          | expresion MOV_LISTA PYC
   42          | DOLLAR expresion PYC

   43 sentencia_asignacion: ID IGUAL expresion PYC

   44 sentencia_if: SI PARIZQ expresion PARDER sentencia
   45             | SI PARIZQ expresion PARDER sentencia OTROCASO sentencia

   46 lista_identificadores: lista_identificadores COMA ID
   47                      | ID

   48 mensajes: mensajes COMA mensaje
   49         | mensaje

   50 mensaje: expresion
   51        | CADENA

   52 llamada_proced: ID PARIZQ lista_expresiones PARDER PYC
   53               | ID PARIZQ PARDER PYC

   54 lista_expresiones: lista_expresiones COMA expresion
   55                  | expresion

   56 expresion: PARIZQ expresion PARDER
   57          | DECRE_PRE expresion
   58          | INCRE_PRE expresion
   59          | NOT expresion
   60          | UNARIO_PRE_LISTA expresion
   61          | ADITIVOS expresion
   62          | expresion ADITIVOS expresion
   63          | expresion DECRE_PRE expresion
   64          | expresion ELEM_POSI expresion
   65          | expresion MULTIPLICATIVOS expresion
   66          | expresion POTENCIAS expresion
   67          | expresion IGUALDAD expresion
   68          | expresion RELACION expresion
   69          | expresion OR expresion
   70          | expresion AND expresion
   71          | expresion XOR expresion
   72          | expresion INCRE_PRE expresion ELEM_POSI expresion
   73          | ID
   74          | agregado_lista
   75          | CONSTANTE
   76          | error

   77 agregado_lista: CORCHIZQ lista_expresiones CORCHDER

   78 tipos: TIPOS
   79      | LISTADE TIPOS


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 18 30 76
    PRINCIPAL (258) 2
    LLAVEIZQ (259) 3
    LLAVEDER (260) 4 5
    COMA (261) 6 8 10 21 22 27 46 48 54
    LISTADE (262) 79
    PROCEDIMIENTO (263) 26
    PARDER (264) 2 27 28 29 36 44 45 52 53 56
    PARIZQ (265) 2 27 28 29 36 44 45 52 53 56
    CORCHIZQ (266) 77
    CORCHDER (267) 77
    IGUAL (268) 8 9 10 11 20 22 43
    INICIOVAR (269) 13
    FINVAR (270) 13
    SI (271) 44 45
    MIENTRAS (272) 36
    OTROCASO (273) 45
    PARA (274) 37
    HASTA (275) 37
    ITERANDO (276) 37
    HACER (277) 37
    LEER (278) 38
    IMPRIMIR (279) 39
    CADENA (280) 51
    ID (281) 12 19 20 21 22 26 43 46 47 52 53 73
    PYC (282) 17 38 39 41 42 43 52 53
    TIPOS (283) 78 79
    CONSTANTE (284) 8 9 75
    ELEM_POSI_BINA (285)
    OR (286) 69
    AND (287) 70
    XOR (288) 71
    IGUALDAD (289) 67
    RELACION (290) 68
    ADITIVOS (291) 61 62
    MULTIPLICATIVOS (292) 65
    POTENCIAS (293) 66
    UNARIOS (294)
    NOT (295) 59
    DECRE_PRE (296) 57 63
    INCRE_PRE (297) 58 72
    UNARIO_PRE_LISTA (298) 60
    ELEM_POSI (299) 64 72
    MOV_LISTA (300) 41
    DOLLAR (301) 42


No terminales con las reglas donde aparecen

    $accept (47)
        on left: 0
    programa (48)
        on left: 1
        on right: 0
    cabecera_programa (49)
        on left: 2
        on right: 1
    inicio_bloque (50)
        on left: 3
        on right: 4 5
    bloque (51)
        on left: 4 5
        on right: 1 25 33
    lista_parametros (52)
        on left: 6 7
        on right: 6 27 28
    lista_para_por_defecto (53)
        on left: 8 9 10 11
        on right: 8 10 27
    parametro (54)
        on left: 12
        on right: 6 7 8 9 10 11
    declar_de_variables_locales (55)
        on left: 13 14
        on right: 4 5
    variables_locales (56)
        on left: 15 16
        on right: 13 15
    cuerpo_declar_variables (57)
        on left: 17 18
        on right: 15 16
    declar_variables (58)
        on left: 19 20 21 22
        on right: 17 21 22
    declar_procedimientos (59)
        on left: 23 24
        on right: 4 23
    declar_proced (60)
        on left: 25
        on right: 23 24
    inicio_cabe_proced (61)
        on left: 26
        on right: 27 28 29
    cabecera_proced (62)
        on left: 27 28 29 30
        on right: 25
    sentencias (63)
        on left: 31 32
        on right: 4 5 31
    sentencia (64)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 31 32 36 37 44 45
    sentencia_asignacion (65)
        on left: 43
        on right: 34 37
    sentencia_if (66)
        on left: 44 45
        on right: 35
    lista_identificadores (67)
        on left: 46 47
        on right: 38 46
    mensajes (68)
        on left: 48 49
        on right: 39 48
    mensaje (69)
        on left: 50 51
        on right: 48 49
    llamada_proced (70)
        on left: 52 53
        on right: 40
    lista_expresiones (71)
        on left: 54 55
        on right: 52 54 77
    expresion (72)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 20 22 36 37 41 42 43 44 45 50 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    agregado_lista (73)
        on left: 77
        on right: 10 11 74
    tipos (74)
        on left: 78 79
        on right: 12 17


Estado 0

    0 $accept: . programa $end

    PRINCIPAL  desplazar e ir al estado 1

    programa           ir al estado 2
    cabecera_programa  ir al estado 3


Estado 1

    2 cabecera_programa: PRINCIPAL . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 4


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    1 programa: cabecera_programa . bloque

    LLAVEIZQ  desplazar e ir al estado 6

    inicio_bloque  ir al estado 7
    bloque         ir al estado 8


Estado 4

    2 cabecera_programa: PRINCIPAL PARIZQ . PARDER

    PARDER  desplazar e ir al estado 9


Estado 5

    0 $accept: programa $end .

    $default  aceptar


Estado 6

    3 inicio_bloque: LLAVEIZQ .

    $default  reduce usando la regla 3 (inicio_bloque)


Estado 7

    4 bloque: inicio_bloque . declar_de_variables_locales declar_procedimientos sentencias LLAVEDER
    5       | inicio_bloque . declar_de_variables_locales sentencias LLAVEDER

    INICIOVAR  desplazar e ir al estado 10

    $default  reduce usando la regla 14 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 11


Estado 8

    1 programa: cabecera_programa bloque .

    $default  reduce usando la regla 1 (programa)


Estado 9

    2 cabecera_programa: PRINCIPAL PARIZQ PARDER .

    $default  reduce usando la regla 2 (cabecera_programa)


Estado 10

   13 declar_de_variables_locales: INICIOVAR . variables_locales FINVAR

    error    desplazar e ir al estado 12
    LISTADE  desplazar e ir al estado 13
    TIPOS    desplazar e ir al estado 14

    variables_locales        ir al estado 15
    cuerpo_declar_variables  ir al estado 16
    tipos                    ir al estado 17


Estado 11

    4 bloque: inicio_bloque declar_de_variables_locales . declar_procedimientos sentencias LLAVEDER
    5       | inicio_bloque declar_de_variables_locales . sentencias LLAVEDER

    error             desplazar e ir al estado 18
    LLAVEIZQ          desplazar e ir al estado 6
    PROCEDIMIENTO     desplazar e ir al estado 19
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    SI                desplazar e ir al estado 22
    MIENTRAS          desplazar e ir al estado 23
    PARA              desplazar e ir al estado 24
    LEER              desplazar e ir al estado 25
    IMPRIMIR          desplazar e ir al estado 26
    ID                desplazar e ir al estado 27
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33
    DOLLAR            desplazar e ir al estado 34

    inicio_bloque          ir al estado 7
    bloque                 ir al estado 35
    declar_procedimientos  ir al estado 36
    declar_proced          ir al estado 37
    inicio_cabe_proced     ir al estado 38
    cabecera_proced        ir al estado 39
    sentencias             ir al estado 40
    sentencia              ir al estado 41
    sentencia_asignacion   ir al estado 42
    sentencia_if           ir al estado 43
    llamada_proced         ir al estado 44
    expresion              ir al estado 45
    agregado_lista         ir al estado 46


Estado 12

   18 cuerpo_declar_variables: error .

    $default  reduce usando la regla 18 (cuerpo_declar_variables)


Estado 13

   79 tipos: LISTADE . TIPOS

    TIPOS  desplazar e ir al estado 47


Estado 14

   78 tipos: TIPOS .

    $default  reduce usando la regla 78 (tipos)


Estado 15

   13 declar_de_variables_locales: INICIOVAR variables_locales . FINVAR
   15 variables_locales: variables_locales . cuerpo_declar_variables

    error    desplazar e ir al estado 12
    LISTADE  desplazar e ir al estado 13
    FINVAR   desplazar e ir al estado 48
    TIPOS    desplazar e ir al estado 14

    cuerpo_declar_variables  ir al estado 49
    tipos                    ir al estado 17


Estado 16

   16 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 16 (variables_locales)


Estado 17

   17 cuerpo_declar_variables: tipos . declar_variables PYC

    ID  desplazar e ir al estado 50

    declar_variables  ir al estado 51


Estado 18

   30 cabecera_proced: error .
   76 expresion: error .

    LLAVEIZQ  reduce usando la regla 30 (cabecera_proced)
    $default  reduce usando la regla 76 (expresion)


Estado 19

   26 inicio_cabe_proced: PROCEDIMIENTO . ID

    ID  desplazar e ir al estado 52


Estado 20

   56 expresion: PARIZQ . expresion PARDER

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 55
    agregado_lista  ir al estado 46


Estado 21

   77 agregado_lista: CORCHIZQ . lista_expresiones CORCHDER

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    lista_expresiones  ir al estado 56
    expresion          ir al estado 57
    agregado_lista     ir al estado 46


Estado 22

   44 sentencia_if: SI . PARIZQ expresion PARDER sentencia
   45             | SI . PARIZQ expresion PARDER sentencia OTROCASO sentencia

    PARIZQ  desplazar e ir al estado 58


Estado 23

   36 sentencia: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 59


Estado 24

   37 sentencia: PARA . sentencia_asignacion HASTA expresion ITERANDO expresion HACER sentencia

    ID  desplazar e ir al estado 60

    sentencia_asignacion  ir al estado 61


Estado 25

   38 sentencia: LEER . lista_identificadores PYC

    ID  desplazar e ir al estado 62

    lista_identificadores  ir al estado 63


Estado 26

   39 sentencia: IMPRIMIR . mensajes PYC

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    CADENA            desplazar e ir al estado 64
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    mensajes        ir al estado 65
    mensaje         ir al estado 66
    expresion       ir al estado 67
    agregado_lista  ir al estado 46


Estado 27

   43 sentencia_asignacion: ID . IGUAL expresion PYC
   52 llamada_proced: ID . PARIZQ lista_expresiones PARDER PYC
   53               | ID . PARIZQ PARDER PYC
   73 expresion: ID .

    PARIZQ  desplazar e ir al estado 68
    IGUAL   desplazar e ir al estado 69

    $default  reduce usando la regla 73 (expresion)


Estado 28

   75 expresion: CONSTANTE .

    $default  reduce usando la regla 75 (expresion)


Estado 29

   61 expresion: ADITIVOS . expresion

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 70
    agregado_lista  ir al estado 46


Estado 30

   59 expresion: NOT . expresion

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 71
    agregado_lista  ir al estado 46


Estado 31

   57 expresion: DECRE_PRE . expresion

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 72
    agregado_lista  ir al estado 46


Estado 32

   58 expresion: INCRE_PRE . expresion

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 73
    agregado_lista  ir al estado 46


Estado 33

   60 expresion: UNARIO_PRE_LISTA . expresion

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 74
    agregado_lista  ir al estado 46


Estado 34

   42 sentencia: DOLLAR . expresion PYC

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 75
    agregado_lista  ir al estado 46


Estado 35

   33 sentencia: bloque .

    $default  reduce usando la regla 33 (sentencia)


Estado 36

    4 bloque: inicio_bloque declar_de_variables_locales declar_procedimientos . sentencias LLAVEDER
   23 declar_procedimientos: declar_procedimientos . declar_proced

    error             desplazar e ir al estado 18
    LLAVEIZQ          desplazar e ir al estado 6
    PROCEDIMIENTO     desplazar e ir al estado 19
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    SI                desplazar e ir al estado 22
    MIENTRAS          desplazar e ir al estado 23
    PARA              desplazar e ir al estado 24
    LEER              desplazar e ir al estado 25
    IMPRIMIR          desplazar e ir al estado 26
    ID                desplazar e ir al estado 27
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33
    DOLLAR            desplazar e ir al estado 34

    inicio_bloque         ir al estado 7
    bloque                ir al estado 35
    declar_proced         ir al estado 76
    inicio_cabe_proced    ir al estado 38
    cabecera_proced       ir al estado 39
    sentencias            ir al estado 77
    sentencia             ir al estado 41
    sentencia_asignacion  ir al estado 42
    sentencia_if          ir al estado 43
    llamada_proced        ir al estado 44
    expresion             ir al estado 45
    agregado_lista        ir al estado 46


Estado 37

   24 declar_procedimientos: declar_proced .

    $default  reduce usando la regla 24 (declar_procedimientos)


Estado 38

   27 cabecera_proced: inicio_cabe_proced . PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   28                | inicio_cabe_proced . PARIZQ lista_parametros PARDER
   29                | inicio_cabe_proced . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 78


Estado 39

   25 declar_proced: cabecera_proced . bloque

    LLAVEIZQ  desplazar e ir al estado 6

    inicio_bloque  ir al estado 7
    bloque         ir al estado 79


Estado 40

    5 bloque: inicio_bloque declar_de_variables_locales sentencias . LLAVEDER
   31 sentencias: sentencias . sentencia

    error             desplazar e ir al estado 53
    LLAVEIZQ          desplazar e ir al estado 6
    LLAVEDER          desplazar e ir al estado 80
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    SI                desplazar e ir al estado 22
    MIENTRAS          desplazar e ir al estado 23
    PARA              desplazar e ir al estado 24
    LEER              desplazar e ir al estado 25
    IMPRIMIR          desplazar e ir al estado 26
    ID                desplazar e ir al estado 27
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33
    DOLLAR            desplazar e ir al estado 34

    inicio_bloque         ir al estado 7
    bloque                ir al estado 35
    sentencia             ir al estado 81
    sentencia_asignacion  ir al estado 42
    sentencia_if          ir al estado 43
    llamada_proced        ir al estado 44
    expresion             ir al estado 45
    agregado_lista        ir al estado 46


Estado 41

   32 sentencias: sentencia .

    $default  reduce usando la regla 32 (sentencias)


Estado 42

   34 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 34 (sentencia)


Estado 43

   35 sentencia: sentencia_if .

    $default  reduce usando la regla 35 (sentencia)


Estado 44

   40 sentencia: llamada_proced .

    $default  reduce usando la regla 40 (sentencia)


Estado 45

   41 sentencia: expresion . MOV_LISTA PYC
   62 expresion: expresion . ADITIVOS expresion
   63          | expresion . DECRE_PRE expresion
   64          | expresion . ELEM_POSI expresion
   65          | expresion . MULTIPLICATIVOS expresion
   66          | expresion . POTENCIAS expresion
   67          | expresion . IGUALDAD expresion
   68          | expresion . RELACION expresion
   69          | expresion . OR expresion
   70          | expresion . AND expresion
   71          | expresion . XOR expresion
   72          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    OR               desplazar e ir al estado 82
    AND              desplazar e ir al estado 83
    XOR              desplazar e ir al estado 84
    IGUALDAD         desplazar e ir al estado 85
    RELACION         desplazar e ir al estado 86
    ADITIVOS         desplazar e ir al estado 87
    MULTIPLICATIVOS  desplazar e ir al estado 88
    POTENCIAS        desplazar e ir al estado 89
    DECRE_PRE        desplazar e ir al estado 90
    INCRE_PRE        desplazar e ir al estado 91
    ELEM_POSI        desplazar e ir al estado 92
    MOV_LISTA        desplazar e ir al estado 93


Estado 46

   74 expresion: agregado_lista .

    $default  reduce usando la regla 74 (expresion)


Estado 47

   79 tipos: LISTADE TIPOS .

    $default  reduce usando la regla 79 (tipos)


Estado 48

   13 declar_de_variables_locales: INICIOVAR variables_locales FINVAR .

    $default  reduce usando la regla 13 (declar_de_variables_locales)


Estado 49

   15 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 15 (variables_locales)


Estado 50

   19 declar_variables: ID .
   20                 | ID . IGUAL expresion

    IGUAL  desplazar e ir al estado 94

    $default  reduce usando la regla 19 (declar_variables)


Estado 51

   17 cuerpo_declar_variables: tipos declar_variables . PYC
   21 declar_variables: declar_variables . COMA ID
   22                 | declar_variables . COMA ID IGUAL expresion

    COMA  desplazar e ir al estado 95
    PYC   desplazar e ir al estado 96


Estado 52

   26 inicio_cabe_proced: PROCEDIMIENTO ID .

    $default  reduce usando la regla 26 (inicio_cabe_proced)


Estado 53

   76 expresion: error .

    $default  reduce usando la regla 76 (expresion)


Estado 54

   73 expresion: ID .

    $default  reduce usando la regla 73 (expresion)


Estado 55

   56 expresion: PARIZQ expresion . PARDER
   62          | expresion . ADITIVOS expresion
   63          | expresion . DECRE_PRE expresion
   64          | expresion . ELEM_POSI expresion
   65          | expresion . MULTIPLICATIVOS expresion
   66          | expresion . POTENCIAS expresion
   67          | expresion . IGUALDAD expresion
   68          | expresion . RELACION expresion
   69          | expresion . OR expresion
   70          | expresion . AND expresion
   71          | expresion . XOR expresion
   72          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    PARDER           desplazar e ir al estado 97
    OR               desplazar e ir al estado 82
    AND              desplazar e ir al estado 83
    XOR              desplazar e ir al estado 84
    IGUALDAD         desplazar e ir al estado 85
    RELACION         desplazar e ir al estado 86
    ADITIVOS         desplazar e ir al estado 87
    MULTIPLICATIVOS  desplazar e ir al estado 88
    POTENCIAS        desplazar e ir al estado 89
    DECRE_PRE        desplazar e ir al estado 90
    INCRE_PRE        desplazar e ir al estado 91
    ELEM_POSI        desplazar e ir al estado 92


Estado 56

   54 lista_expresiones: lista_expresiones . COMA expresion
   77 agregado_lista: CORCHIZQ lista_expresiones . CORCHDER

    COMA      desplazar e ir al estado 98
    CORCHDER  desplazar e ir al estado 99


Estado 57

   55 lista_expresiones: expresion .
   62 expresion: expresion . ADITIVOS expresion
   63          | expresion . DECRE_PRE expresion
   64          | expresion . ELEM_POSI expresion
   65          | expresion . MULTIPLICATIVOS expresion
   66          | expresion . POTENCIAS expresion
   67          | expresion . IGUALDAD expresion
   68          | expresion . RELACION expresion
   69          | expresion . OR expresion
   70          | expresion . AND expresion
   71          | expresion . XOR expresion
   72          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    OR               desplazar e ir al estado 82
    AND              desplazar e ir al estado 83
    XOR              desplazar e ir al estado 84
    IGUALDAD         desplazar e ir al estado 85
    RELACION         desplazar e ir al estado 86
    ADITIVOS         desplazar e ir al estado 87
    MULTIPLICATIVOS  desplazar e ir al estado 88
    POTENCIAS        desplazar e ir al estado 89
    DECRE_PRE        desplazar e ir al estado 90
    INCRE_PRE        desplazar e ir al estado 91
    ELEM_POSI        desplazar e ir al estado 92

    $default  reduce usando la regla 55 (lista_expresiones)


Estado 58

   44 sentencia_if: SI PARIZQ . expresion PARDER sentencia
   45             | SI PARIZQ . expresion PARDER sentencia OTROCASO sentencia

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 100
    agregado_lista  ir al estado 46


Estado 59

   36 sentencia: MIENTRAS PARIZQ . expresion PARDER sentencia

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 101
    agregado_lista  ir al estado 46


Estado 60

   43 sentencia_asignacion: ID . IGUAL expresion PYC

    IGUAL  desplazar e ir al estado 69


Estado 61

   37 sentencia: PARA sentencia_asignacion . HASTA expresion ITERANDO expresion HACER sentencia

    HASTA  desplazar e ir al estado 102


Estado 62

   47 lista_identificadores: ID .

    $default  reduce usando la regla 47 (lista_identificadores)


Estado 63

   38 sentencia: LEER lista_identificadores . PYC
   46 lista_identificadores: lista_identificadores . COMA ID

    COMA  desplazar e ir al estado 103
    PYC   desplazar e ir al estado 104


Estado 64

   51 mensaje: CADENA .

    $default  reduce usando la regla 51 (mensaje)


Estado 65

   39 sentencia: IMPRIMIR mensajes . PYC
   48 mensajes: mensajes . COMA mensaje

    COMA  desplazar e ir al estado 105
    PYC   desplazar e ir al estado 106


Estado 66

   49 mensajes: mensaje .

    $default  reduce usando la regla 49 (mensajes)


Estado 67

   50 mensaje: expresion .
   62 expresion: expresion . ADITIVOS expresion
   63          | expresion . DECRE_PRE expresion
   64          | expresion . ELEM_POSI expresion
   65          | expresion . MULTIPLICATIVOS expresion
   66          | expresion . POTENCIAS expresion
   67          | expresion . IGUALDAD expresion
   68          | expresion . RELACION expresion
   69          | expresion . OR expresion
   70          | expresion . AND expresion
   71          | expresion . XOR expresion
   72          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    OR               desplazar e ir al estado 82
    AND              desplazar e ir al estado 83
    XOR              desplazar e ir al estado 84
    IGUALDAD         desplazar e ir al estado 85
    RELACION         desplazar e ir al estado 86
    ADITIVOS         desplazar e ir al estado 87
    MULTIPLICATIVOS  desplazar e ir al estado 88
    POTENCIAS        desplazar e ir al estado 89
    DECRE_PRE        desplazar e ir al estado 90
    INCRE_PRE        desplazar e ir al estado 91
    ELEM_POSI        desplazar e ir al estado 92

    $default  reduce usando la regla 50 (mensaje)


Estado 68

   52 llamada_proced: ID PARIZQ . lista_expresiones PARDER PYC
   53               | ID PARIZQ . PARDER PYC

    error             desplazar e ir al estado 53
    PARDER            desplazar e ir al estado 107
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    lista_expresiones  ir al estado 108
    expresion          ir al estado 57
    agregado_lista     ir al estado 46


Estado 69

   43 sentencia_asignacion: ID IGUAL . expresion PYC

    error             desplazar e ir al estado 53
    PARIZQ            desplazar e ir al estado 20
    CORCHIZQ          desplazar e ir al estado 21
    ID                desplazar e ir al estado 54
    CONSTANTE         desplazar e ir al estado 28
    ADITIVOS          desplazar e ir al estado 29
    NOT               desplazar e ir al estado 30
    DECRE_PRE         desplazar e ir al estado 31
    INCRE_PRE         desplazar e ir al estado 32
    UNARIO_PRE_LISTA  desplazar e ir al estado 33

    expresion       ir al estado 109
    agregado_lista  ir al estado 46


Estado 70

   61 expresion: ADITIVOS expresion .
   62          | expresion . ADITIVOS expresion
   63          | expresion . DECRE_PRE expresion
   64          | expresion . ELEM_POSI expresion
   65          | expresion . MULTIPLICATIVOS expresion
   66          | expresion . POTENCIAS expresion
   67          | expresion . IGUALDAD expresion
   68          | expresion . RELACION expresion
   69          | expresion . OR expresion
   70          | expresion . AND expresion
   71          | expresion . XOR expresion
   72          | expresion . INCRE_PRE expresion ELEM_POSI expresion

    DECRE_PRE  desplazar e ir al estado 90
    INCRE_PRE  desplazar e ir al estado 91
    ELEM_POSI  desplazar e ir al estado 92

    $default  reduce usando la regla 61 (expresion)


Estado 71
